[metadata]
name = snowfake
version = attr: snowfake.__version__
author = Matt Hall
author_email = matt@agilescientific.com
description = Simulate snowflakes with Gravner-Griffeath algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agilescientific/snowfake
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = snowfake
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy
    tqdm

[options.extras_require]
skimage = scikit-image
test = pytest; pytest-cov; scikit-image
docs = sphinx; sphinxcontrib-apidoc; furo; myst_parser
dev = pytest; pytest-cov; scikit-image; sphinx; sphinxcontrib-apidoc; furo; myst_parser

[tool:pytest]
# pytest configuration: http://doc.pytest.org/en/latest/customize.html
addopts =
    --ignore=docs
    --cov=snowfake
filterwarnings =
    ignore::DeprecationWarning:skimage.*

[coverage:run]
# coverage configuration: https://coverage.readthedocs.io/
omit =
    snowfake/__init__.py
    snowfake/_version.py
